# BC3manager

./: .gitignore  API_INTERNA.md  ARCHITECTURE.md  Analisis estrategico.md  CHANGELOG.md  CLAUDE.md  README.md  _analisis_rt.py  _analisis_rt2.py  ejemplo_son_font.bc3  pyproject.toml
bc3manager/: cli.py  web.py
bc3manager/core/: model.py
bc3manager/io/: escritor.py  lector.py
bc3manager/reports/: informes.py
docs/: api-interna.md  arquitectura.md  decisiones.md  formato-bc3.md  guia-sesiones.md
docs/auditoria/: auditoria-calculo.md  estado-tests.md  problemas.md  spec-script-comparacion.md
scripts/: gen_ejemplo.py
tests/: Test_Alqueria.bc3  Test_REDONDEO.bc3  Test_SONFONT.bc3  test_basico.py
